Updated case study

--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ ehthumbs_vista.db
 # Dump file
 *.stackdump
 
-# Folder config file
+# Folder config.json file
 [Dd]esktop.ini
 
 # Recycle Bin used on file shares
