--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>il.co</groupId>
+	<groupId>il.co.multiDatabaseFramework</groupId>
 	<artifactId>Model-based-Framework-for-Developing-Multi-Database-Application-tests</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<build>
 		<plugins>
